Add german strings to Antispam.apk

--- a/German/main/AntiSpam.apk/res/values-de/strings.xml
+++ b/German/main/AntiSpam.apk/res/values-de/strings.xml
@@ -1,92 +1,92 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="ad_block_hint">%d blocked</string>
-  <string name="ad_permission_hint">"Using ad blocker may also affect app performance or prevent them from working correctly."</string>
-  <string name="ad_single_block_hint">Blocked</string>
-  <string name="app_name">Guard</string>
-  <string name="bl_block_info" formatted="false">Blocked: Number %d, details %d</string>
-  <string name="bl_no_blacklist">No blocked numbers</string>
-  <string name="bl_no_block_call">No blocked calls</string>
-  <string name="bl_no_block_sms">No blocked messages</string>
-  <string name="dlg_add_blacklist">Block this number?</string>
-  <string name="dlg_add_keyword">Add keywords</string>
-  <string name="dlg_add_manual_hint">Input phone number</string>
-  <string name="dlg_add_manual_ok">Add</string>
-  <string name="dlg_bl_add_manual">Add number to blacklist manually</string>
-  <string name="dlg_clear_all_call">Clear blocked calls?</string>
-  <string name="dlg_clear_all_ok">Clear all</string>
-  <string name="dlg_clear_all_sms">Clear all blocked messages?</string>
-  <string name="dlg_clear_blacklist">Clear blacklist?</string>
-  <string name="dlg_clear_blacklist_ok">Clear</string>
-  <string name="dlg_clear_current_call">Clear all blocked calls from this number?</string>
-  <string name="dlg_clear_current_ok">Delete</string>
-  <string name="dlg_clear_current_sms">Remove all blocked messages from this number?</string>
-  <string name="dlg_delete_keyword">Remove selected keywords?</string>
-  <string name="dlg_edit_keyword">Edit keyword</string>
-  <string name="dlg_import_blacklist">Importing to blacklist</string>
-  <string name="dlg_import_whitelist">Adding to exceptions…</string>
-  <string name="dlg_keyword_ok">Save</string>
-  <string name="dlg_no_block">"Don't block this number?"</string>
-  <string name="dlg_no_block_ok">"Don't block"</string>
-  <string name="dlg_remove_blacklist">Remove this number from blacklist?</string>
-  <string name="dlg_remove_blacklist_ok">Remove</string>
-  <string name="dlg_retore">Restore to messaging app?</string>
-  <string name="dlg_retore_ok">Restore</string>
-  <string name="fw_blocked">Blocked stats</string>
-  <string name="fw_blocked_count" formatted="false">Intercepted: %d Calls and %d Messages</string>
+  <string name="ad_block_hint">%d blockiert</string>
+  <string name="ad_permission_hint">"Werbeblocker können die Performance beeinflussen, oder das korrekte weiter arbeiten der Programme verhindern."</string>
+  <string name="ad_single_block_hint">Blockiert</string>
+  <string name="app_name">Wächter</string>
+  <string name="bl_block_info" formatted="false">Blockiert: Nummer %d, Details %d</string>
+  <string name="bl_no_blacklist">Keine blockierten Nummern</string>
+  <string name="bl_no_block_call">Keine blockierten Anrufe</string>
+  <string name="bl_no_block_sms">Keine blockierten Nachrichten</string>
+  <string name="dlg_add_blacklist">Diese Nummer wirklich blockieren?</string>
+  <string name="dlg_add_keyword">Stichwörter hinzufügen</string>
+  <string name="dlg_add_manual_hint">Telefonnummer eingeben</string>
+  <string name="dlg_add_manual_ok">Hinzufügen</string>
+  <string name="dlg_bl_add_manual">Nummer manuell zur Blockliste hinzufügen</string>
+  <string name="dlg_clear_all_call">Blockierte Anrufe löschen?</string>
+  <string name="dlg_clear_all_ok">Alle löschen</string>
+  <string name="dlg_clear_all_sms">Alle blockierten Nachrichten löschen?</string>
+  <string name="dlg_clear_blacklist">Blockliste löschen?</string>
+  <string name="dlg_clear_blacklist_ok">Löschen</string>
+  <string name="dlg_clear_current_call">Alle blockierten Anrufe dieser Nummer löschen?</string>
+  <string name="dlg_clear_current_ok">Löschen</string>
+  <string name="dlg_clear_current_sms">Alle blockierten Nachrichten dieser Nummer löschen?</string>
+  <string name="dlg_delete_keyword">Ausgewählte Stichwörter entfernen?</string>
+  <string name="dlg_edit_keyword">Stichwort ändern </string>
+  <string name="dlg_import_blacklist">Zur Blockliste hinzufügen</string>
+  <string name="dlg_import_whitelist">Zu Ausnahme hinzufügen…</string>
+  <string name="dlg_keyword_ok">Speichern</string>
+  <string name="dlg_no_block">"Diese Nummer nicht blockieren?"</string>
+  <string name="dlg_no_block_ok">"Nicht blockieren"</string>
+  <string name="dlg_remove_blacklist">Diese Nummer aus der Blockliste entfernen?</string>
+  <string name="dlg_remove_blacklist_ok">Entfernen</string>
+  <string name="dlg_retore">In Nachrichten wiederherstellen?</string>
+  <string name="dlg_retore_ok">Wiederherstellen</string>
+  <string name="fw_blocked">Blockliste</string>
+  <string name="fw_blocked_count" formatted="false">Blockiert: %d Anrufe und %d Nachrichten</string>
   <string name="log_count">(%d)</string>
-  <string name="marked_by_others">%d people marked it as</string>
-  <string name="marked_by_user">marked by me</string>
-  <string name="menu_add">Add</string>
-  <string name="menu_add_into_contact">Add to existing contact</string>
-  <string name="menu_add_new_contact">New contact</string>
-  <string name="menu_bl_add_contact">Contacts</string>
-  <string name="menu_bl_add_manual">Add</string>
-  <string name="menu_bl_call_log">View blocked calls</string>
-  <string name="menu_bl_clear">Clear blacklist</string>
-  <string name="menu_bl_remove">Remove from blacklist</string>
-  <string name="menu_bl_sms_log">Check blocked messages</string>
-  <string name="menu_call">Dial</string>
-  <string name="menu_clear_all_call">Remove all blocked calls</string>
-  <string name="menu_clear_all_sms">Remove all blocked messages</string>
-  <string name="menu_clear_current_call">Remove all blocked calls from this number</string>
-  <string name="menu_clear_current_sms">Remove all blocked message sent by this number</string>
-  <string name="menu_edit">Edit</string>
-  <string name="menu_mark">Mark</string>
-  <string name="menu_no_block">Unblock</string>
-  <string name="menu_remove">Remove</string>
-  <string name="menu_restore">Restore to messages</string>
-  <string name="menu_sms">Send message</string>
-  <string name="st_advanced_setting_group">Advanced settings</string>
-  <string name="st_block_all">Block calls and messages</string>
-  <string name="st_block_mute">Block calls and mute messages</string>
-  <string name="st_block_private_call_button">Block incoming private number</string>
-  <string name="st_block_setting_group">Blocklist Settings</string>
-  <string name="st_block_setting_title">Calls and messages</string>
-  <string name="st_block_title">Block and log</string>
-  <string name="st_block_unknown_call">Block all unknown calls</string>
-  <string name="st_block_unknown_sms">Block all unknown messages</string>
-  <string name="st_call_group">Call</string>
-  <string name="st_common_setting_group">Filter settings</string>
-  <string name="st_filter_keywords_setting_summary1">Messages from unknown contacts will be blocked.</string>
-  <string name="st_filter_keywords_setting_summary2">Add multiple keywords delimited by a comma.</string>
-  <string name="st_filter_keywords_setting_title">Set filter keywords</string>
-  <string name="st_filter_keywords_title">Filter keywords</string>
-  <string name="st_filter_sms_button">Filter spam messages</string>
-  <string name="st_mute_all">Mute calls and messages</string>
-  <string name="st_mute_block">Mute calls and block messages</string>
-  <string name="st_mute_title">Silent mode</string>
-  <string name="st_other_setting_group">Other Settings</string>
-  <string name="st_settings_name">Settings</string>
-  <string name="st_show_block_notification">Show blocked notification</string>
-  <string name="st_sms_group">Messages</string>
-  <string name="tab_blacklist">Blacklist</string>
+  <string name="marked_by_others">%d Benutzer markierten sie als</string>
+  <string name="marked_by_user">Sie meldeten sie als</string>
+  <string name="menu_add">Hinzufügen</string>
+  <string name="menu_add_into_contact">Einem bestehenden Kontakt zuweisen</string>
+  <string name="menu_add_new_contact">Neuer Kontakt</string>
+  <string name="menu_bl_add_contact">Kontakte</string>
+  <string name="menu_bl_add_manual">Hinzufügen</string>
+  <string name="menu_bl_call_log">Blockierte Anrufe anzeigen</string>
+  <string name="menu_bl_clear">Blockliste löschen</string>
+  <string name="menu_bl_remove">Aus der Blockliste entfernen</string>
+  <string name="menu_bl_sms_log">Blockierte Nachrichten anzeigen</string>
+  <string name="menu_call">Wählen</string>
+  <string name="menu_clear_all_call">Alle blockierten Anrufe entfernen</string>
+  <string name="menu_clear_all_sms">Alle blockierten Nachrichten entfernen</string>
+  <string name="menu_clear_current_call">Alle blockierten Anrufe dieser Nummer entfernen</string>
+  <string name="menu_clear_current_sms">Alle blockierten Nachrichten dieser Nummer entfernen</string>
+  <string name="menu_edit">Bearbeiten</string>
+  <string name="menu_mark">Markieren</string>
+  <string name="menu_no_block">Entblocken</string>
+  <string name="menu_remove">Entfernen</string>
+  <string name="menu_restore">In Nachrichten wiederherstellen</string>
+  <string name="menu_sms">Nachricht senden</string>
+  <string name="st_advanced_setting_group">Erweiterte Einstellungen</string>
+  <string name="st_block_all">Anrufe und Nachrichten blockieren</string>
+  <string name="st_block_mute">Anrufe blockieren und Nachrichten auf lautlos</string>
+  <string name="st_block_private_call_button">Private Nummern blockieren</string>
+  <string name="st_block_setting_group">Blocklisten Einstellungen</string>
+  <string name="st_block_setting_title">Anrufe und Nachrichten</string>
+  <string name="st_block_title">Blockieren und Verlauf</string>
+  <string name="st_block_unknown_call">Unbekannte Anrufer blockieren</string>
+  <string name="st_block_unknown_sms">Unbekannten Nachrichten blockieren</string>
+  <string name="st_call_group">Anrufe</string>
+  <string name="st_common_setting_group">Filter Einstellungen</string>
+  <string name="st_filter_keywords_setting_summary1">Nachrichten von unbekannten Kontakten werden blockiert.</string>
+  <string name="st_filter_keywords_setting_summary2">Einzelne Stichwörter mit einem Komma getrennt eintragen.</string>
+  <string name="st_filter_keywords_setting_title">Stichwortfilter einstellen</string>
+  <string name="st_filter_keywords_title">Stichwortfilter</string>
+  <string name="st_filter_sms_button">Nachrichten filtern</string>
+  <string name="st_mute_all">Anrufe und Nachrichten lautlos stellen</string>
+  <string name="st_mute_block">Anrufe lautlos stellen und Nachrichten blockieren</string>
+  <string name="st_mute_title">Lautlos</string>
+  <string name="st_other_setting_group">Andere Einstellungen</string>
+  <string name="st_settings_name">Einstellungen</string>
+  <string name="st_show_block_notification">Blockierte Hinweise anzeigen</string>
+  <string name="st_sms_group">Nachrichten</string>
+  <string name="tab_blacklist">Blockliste</string>
   <string name="tab_block_log">Firewall</string>
-  <string name="tab_block_log_unKnowNumber">Unknown number</string>
-  <string name="tab_call">Call log</string>
-  <string name="tab_sms">Message log</string>
-  <string name="tab_title">Guard</string>
-  <string name="toast_keyword_blank">Please input a keyword</string>
-  <string name="toast_keyword_exist">Keyword already exists</string>
-  <string name="toast_keyword_invalid">Invalid keyword entered</string>
+  <string name="tab_block_log_unKnowNumber">Unbekannte Nummer</string>
+  <string name="tab_call">Anrufe</string>
+  <string name="tab_sms">Nachrichten</string>
+  <string name="tab_title">Wächter</string>
+  <string name="toast_keyword_blank">Bitte ein Stichwort eingeben</string>
+  <string name="toast_keyword_exist">Stichwort existiert bereits</string>
+  <string name="toast_keyword_invalid">Ungültiges Stichwort eingegeben</string>
 </resources>
