Add german strings to Backup.apk part 1

--- a/German/main/Backup.apk/res/values-de/strings.xml
+++ b/German/main/Backup.apk/res/values-de/strings.xml
@@ -1,64 +1,63 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="account_contact_backup_info">Data (Backup Xiaomi and Gmail info)</string>
-  <string name="account_login">Login</string>
-  <string name="account_summary">Backup Xiaomi, Google accounts and other user data</string>
-  <string name="already_enable_encrypt">Encryption enabled</string>
-  <string name="app_name">Backup</string>
-  <string name="auto_backup">Automatic Backup</string>
-  <string name="auto_backup_all_user_apps">All apps</string>
-  <string name="auto_backup_choose">Automatically backup</string>
-  <string name="auto_backup_choose_empty">No backups</string>
-  <string name="auto_backup_choose_title">Choose backup items</string>
-  <string name="auto_backup_date">Backup frequency (in days)</string>
-  <string name="auto_backup_only_wifi">Automatically backup only when Wi-Fi connected</string>
-  <string name="auto_backup_open">Enable automatic backup</string>
-  <string name="auto_backup_progress">Performing automatic backup please wait...</string>
-  <string name="auto_backup_select_user_apps">Select apps</string>
-  <string name="auto_backup_selected_user_apps">Selected apps</string>
-  <string name="auto_backup_setting">Automatic backup settings</string>
+  <string name="account_contact_backup_info">Daten (Xiaomi und Gmail Daten sichern)</string>
+  <string name="account_login">Anmelden</string>
+  <string name="account_summary">Xiaomi, Google und andere Benutzerdaten sichern</string>
+  <string name="already_enable_encrypt">Verschlüsselung aktiviert</string>
+  <string name="app_name">Sichern</string>
+  <string name="auto_backup">Automatische Sicherung</string>
+  <string name="auto_backup_all_user_apps">Alle Programme</string>
+  <string name="auto_backup_choose">Automatisches sichern</string>
+  <string name="auto_backup_choose_empty">Keine Sicherungen</string>
+  <string name="auto_backup_choose_title">Elemente zum Sichern auswählen</string>
+  <string name="auto_backup_date">Regelmässiges Sichern (In Tagen)</string>
+  <string name="auto_backup_only_wifi">Nur wenn mit WLAN verbunden</string>
+  <string name="auto_backup_open">Automatisches Sichern aktivieren</string>
+  <string name="auto_backup_progress">Bitte warten... Führt automatische Sicherung aus</string>
+  <string name="auto_backup_select_user_apps">Programme Auswählen</string>
+  <string name="auto_backup_selected_user_apps">Ausgewählte Programme</string>
+  <string name="auto_backup_setting">Einstellungen für Automatische Sicherung</string>
   <string name="auto_backup_system_data">System</string>
-  <string name="auto_backup_time">Schedule backup</string>
-  <string name="auto_backup_user_data">Apps</string>
-  <string name="backup">Backup now</string>
-  <string name="backup_data">Backup data</string>
-  <string name="backup_delete">Delete:</string>
-  <string name="backup_empty">No backup files found</string>
-  <string name="backup_empty_info">Backup your data, settings and applications</string>
-  <string name="backup_error">Backup Error</string>
-  <string name="backup_failed">Backup failed, please try again</string>
-  <string name="backup_file_error">There was a problem with the backup, the operation was not valid.</string>
-  <string name="backup_finished">Backup completed</string>
-  <string name="backup_hint">Do not switch off phone, may cause corrupt data</string>
-  <string name="backup_items_app_tailer">"  app data files "</string>
-  <string name="backup_items_sysdata_tailer">"  system data files, "</string>
-  <string name="backup_new">New:</string>
-  <string name="backup_progress">Backing up...</string>
-  <string name="backup_recently">"  (most recent) "</string>
-  <string name="backup_report">View backup details</string>
-  <string name="backup_update">Update</string>
-  <string name="batch_delete_backup_confirm">Delete %d backup(s)?</string>
-  <string name="button_abandon">Abort</string>
-  <string name="button_backup">Backup</string>
-  <string name="button_cancel">Cancel</string>
-  <string name="button_continue">Continue</string>
-  <string name="button_delete">Delete</string>
-  <string name="button_finish">Finish</string>
-  <string name="button_next">Next</string>
+  <string name="auto_backup_time">Zeitplan</string>
+  <string name="auto_backup_user_data">Programme</string>
+  <string name="backup">Jetzt sichern</string>
+  <string name="backup_data">Daten sichern</string>
+  <string name="backup_delete">Entfernen:</string>
+  <string name="backup_empty">Keine Sicherung gefunden</string>
+  <string name="backup_empty_info">Daten, Einstellungen und Programme sichern</string>
+  <string name="backup_error">Sicherung fehlgeschlagen</string>
+  <string name="backup_failed">Sicherung fehlgeschlagen</string>
+  <string name="backup_file_error">Sicherung fehlgeschlagen</string>
+  <string name="backup_finished">Sicherung abgeschlossen</string>
+  <string name="backup_hint">Bitte das Gerät nicht ausschalten</string>
+  <string name="backup_items_app_tailer">"  App-Daten "</string>
+  <string name="backup_items_sysdata_tailer">"  System-Daten, "</string>
+  <string name="backup_new">Neu:</string>
+  <string name="backup_progress">Sichere...</string>
+  <string name="backup_recently">"  (aktuellste) "</string>
+  <string name="backup_report">Sicherungs-Details</string>
+  <string name="backup_update">Aktualisieren</string>
+  <string name="batch_delete_backup_confirm">%d Sicherung(en) löschen?</string>
+  <string name="button_abandon">Abbrechen</string>
+  <string name="button_backup">Sichern</string>
+  <string name="button_cancel">Abbrechen</string>
+  <string name="button_continue">Fortsetzen</string>
+  <string name="button_delete">Löschen</string>
+  <string name="button_finish">Fertig</string>
+  <string name="button_next">Nächstes</string>
   <string name="button_ok">OK</string>
-  <string name="button_restore">Restore</string>
-  <string name="button_return">Back</string>
-  <string name="call_title">Call logs</string>
-  <string name="cancel">Cancel</string>
-  <string name="cancel_backup">Cancel Backup</string>
-  <string name="cancel_restore">Cancel Restore</string>
-  <string name="cloud_app_backup_cancel">Cancel backup</string>
-  <string name="cloud_app_backup_cancel_prompt_message">"Backup incompleted, press 
-Ok to cancel backup"</string>
-  <string name="cloud_app_backup_cancel_prompt_title">Cancel backup</string>
-  <string name="cloud_app_backup_date">"Backed up on "</string>
-  <string name="cloud_app_backup_pending">Pending...</string>
-  <string name="cloud_app_backup_progress">Backing up...</string>
+  <string name="button_restore">Wiederherstellen</string>
+  <string name="button_return">Zurück</string>
+  <string name="call_title">Anrufliste</string>
+  <string name="cancel">Abbrechen</string>
+  <string name="cancel_backup">Sicherung abbrechen</string>
+  <string name="cancel_restore">Wiederherstellung abbrechen</string>
+  <string name="cloud_app_backup_cancel">Sicherung abbrechen</string>
+  <string name="cloud_app_backup_cancel_prompt_message">"Sicherung unvollständig, drücke OK um das Sichern abzubrechen"</string>
+  <string name="cloud_app_backup_cancel_prompt_title">Sicherung abbrechen</string>
+  <string name="cloud_app_backup_date">"Sicherung vom "</string>
+  <string name="cloud_app_backup_pending">Bitte warten...</string>
+  <string name="cloud_app_backup_progress">Sichere...</string>
   <string name="cloud_app_backup_summary">Automatically back up apps and user data when phone is charging and connected to Wi-Fi</string>
   <string name="cloud_app_backup_title">Backup in MiCloud</string>
   <string name="cloud_app_check_data">Querying data from MiCloud...</string>
