Add german strings to Backup.apk part 2
And now its time go to to sleep ;-)

--- a/German/main/Backup.apk/res/values-de/strings.xml
+++ b/German/main/Backup.apk/res/values-de/strings.xml
@@ -6,7 +6,7 @@
   <string name="already_enable_encrypt">Verschlüsselung aktiviert</string>
   <string name="app_name">Sichern</string>
   <string name="auto_backup">Automatische Sicherung</string>
-  <string name="auto_backup_all_user_apps">Alle Programme</string>
+  <string name="auto_backup_all_user_apps">Alle Apps</string>
   <string name="auto_backup_choose">Automatisches sichern</string>
   <string name="auto_backup_choose_empty">Keine Sicherungen</string>
   <string name="auto_backup_choose_title">Elemente zum Sichern auswählen</string>
@@ -14,17 +14,17 @@
   <string name="auto_backup_only_wifi">Nur wenn mit WLAN verbunden</string>
   <string name="auto_backup_open">Automatisches Sichern aktivieren</string>
   <string name="auto_backup_progress">Bitte warten... Führt automatische Sicherung aus</string>
-  <string name="auto_backup_select_user_apps">Programme Auswählen</string>
-  <string name="auto_backup_selected_user_apps">Ausgewählte Programme</string>
+  <string name="auto_backup_select_user_apps">Apps Auswählen</string>
+  <string name="auto_backup_selected_user_apps">Ausgewählte Apps</string>
   <string name="auto_backup_setting">Einstellungen für Automatische Sicherung</string>
   <string name="auto_backup_system_data">System</string>
   <string name="auto_backup_time">Zeitplan</string>
-  <string name="auto_backup_user_data">Programme</string>
+  <string name="auto_backup_user_data">Apps</string>
   <string name="backup">Jetzt sichern</string>
   <string name="backup_data">Daten sichern</string>
   <string name="backup_delete">Entfernen:</string>
   <string name="backup_empty">Keine Sicherung gefunden</string>
-  <string name="backup_empty_info">Daten, Einstellungen und Programme sichern</string>
+  <string name="backup_empty_info">Daten, Einstellungen und Apps sichern</string>
   <string name="backup_error">Sicherung fehlgeschlagen</string>
   <string name="backup_failed">Sicherung fehlgeschlagen</string>
   <string name="backup_file_error">Sicherung fehlgeschlagen</string>
@@ -58,54 +58,52 @@
   <string name="cloud_app_backup_date">"Sicherung vom "</string>
   <string name="cloud_app_backup_pending">Bitte warten...</string>
   <string name="cloud_app_backup_progress">Sichere...</string>
-  <string name="cloud_app_backup_summary">Automatically back up apps and user data when phone is charging and connected to Wi-Fi</string>
-  <string name="cloud_app_backup_title">Backup in MiCloud</string>
-  <string name="cloud_app_check_data">Querying data from MiCloud...</string>
-  <string name="cloud_app_check_data_fail">Failed to query data from MiCloud</string>
-  <string name="cloud_app_check_data_timeout">Timeout for querying data from MiCloud</string>
-  <string name="cloud_app_current_device">Current device</string>
-  <string name="cloud_app_data_in_other_devices">No MiCloud backups on this device.</string>
-  <string name="cloud_app_delete_data">Delete backup</string>
-  <string name="cloud_app_device">Device</string>
-  <string name="cloud_app_dont_restore">"Don't restore"</string>
-  <string name="cloud_app_find_backup_prompt_1">Before you restore, do you want to save your local data?</string>
-  <string name="cloud_app_find_backup_prompt_2">If you abandon it now, it will be overwritten when you restore.</string>
-  <string name="cloud_app_function_summary">When you back up your data to the cloud, you can restore it quickly on any device.</string>
-  <string name="cloud_app_invalid_op">"You can't view cloud data while it is being backed up or restored."</string>
-  <string name="cloud_app_invalid_op_when_removing">"You can't view MiCloud data while it is being removed!"</string>
-  <string name="cloud_app_just_show_in_current_device">Only show apps on this device</string>
-  <string name="cloud_app_load_data">Querying backup data list...</string>
-  <string name="cloud_app_load_data_timeout">Timeout querying data from MiCloud</string>
-  <string name="cloud_app_loading_with_mobile_network_prompt">"Mobile data traffic will be used for continuing. Would you like to continue?"</string>
-  <string name="cloud_app_mine">Downloaded apps</string>
-  <string name="cloud_app_name">Cloud Backup</string>
-  <string name="cloud_app_no_data">No data here.</string>
-  <string name="cloud_app_no_network">Network unavailable</string>
-  <string name="cloud_app_no_wifi">Wi-Fi unavailable</string>
-  <string name="cloud_app_no_wifi_connect">No Wi-Fi connection available</string>
-  <string name="cloud_app_other_devices">Other devices</string>
-  <string name="cloud_app_remove_cancel">Cancel deletion</string>
-  <string name="cloud_app_remove_cancel_prompt_message">"Delete incomplete backup, press OK
-to cancel"</string>
-  <string name="cloud_app_remove_cancel_prompt_title">Stop deletion</string>
-  <string name="cloud_app_remove_error">Failed to delete!</string>
-  <string name="cloud_app_remove_pending">Waiting to delete...</string>
-  <string name="cloud_app_remove_progress">Deleting...</string>
-  <string name="cloud_app_remove_prompt">%1$s of data will be deleted. Do you want to continue?</string>
-  <string name="cloud_app_restore_action_bar_title">%1$s of data has been backed up</string>
-  <string name="cloud_app_restore_app_and_data">Restore apps and user data</string>
-  <string name="cloud_app_restore_cancel">Cancel restore</string>
-  <string name="cloud_app_restore_cancel_prompt_message">"Restore incomplete, press OK
-to cancel restore"</string>
-  <string name="cloud_app_restore_cancel_prompt_title">Cancel restore</string>
-  <string name="cloud_app_restore_data">Restore previously installed apps</string>
-  <string name="cloud_app_restore_data_title">Restore user data</string>
-  <string name="cloud_app_restore_error">Restore failed!</string>
-  <string name="cloud_app_restore_pending">Waiting to restore...</string>
-  <string name="cloud_app_restore_progress">Restoring...</string>
-  <string name="cloud_app_restore_prompt">Restoring will overwrite local user data with data that as been backed up in the cloud.</string>
-  <string name="cloud_app_restore_query_error_prompt">"Failed to get data from MiCloud. Apps and user data will be restored automatically when your device is able to connect."</string>
-  <string name="cloud_app_restore_success">Apps restored!</string>
+  <string name="cloud_app_backup_summary">Automatisch sichern wenn das Gerät mit dem Netzteil verbunden und im WLAN ist</string>
+  <string name="cloud_app_backup_title">Sichere in die MiCloud</string>
+  <string name="cloud_app_check_data">Lade Daten von MiCloud...</string>
+  <string name="cloud_app_check_data_fail">Laden der Daten von MiCloud fehlgeschlagen</string>
+  <string name="cloud_app_check_data_timeout">Zeitüberschreitung beim Laden der Daten von MiCloud</string>
+  <string name="cloud_app_current_device">Aktuelles Gerät</string>
+  <string name="cloud_app_data_in_other_devices">Keine MiCloud Sicherungen auf diesem Gerät.</string>
+  <string name="cloud_app_delete_data">Sicherung löschen</string>
+  <string name="cloud_app_device">Gerät</string>
+  <string name="cloud_app_dont_restore">"Nicht wiederherstellen"</string>
+  <string name="cloud_app_find_backup_prompt_1">Lokale Daten sichern bevor wiederhergestellt wird?</string>
+  <string name="cloud_app_find_backup_prompt_2">Bei Abbruch werden die lokalen Daten überschrieben.</string>
+  <string name="cloud_app_function_summary">Werden die Daten in der MiCloud gesichert, können sie von von jedem Gerät mit Zugriff auf die MiCloud wiederhergestellt werden.</string>
+  <string name="cloud_app_invalid_op">"MiCloud Daten können während einer Sicherung oder Wiederherstellung nicht angezeigt werden."</string>
+  <string name="cloud_app_invalid_op_when_removing">"MiCloud Daten können nicht angezeigt werden während sie entfernt werden!"</string>
+  <string name="cloud_app_just_show_in_current_device">Nur Apps auf diesem Gerät anzeigen</string>
+  <string name="cloud_app_load_data">Sicherungs Daten werden geladen...</string>
+  <string name="cloud_app_load_data_timeout">Zeitüberschreitung beim laden der Daten von MiCloud</string>
+  <string name="cloud_app_loading_with_mobile_network_prompt">"Mobile Datenverbindung wird genutzt. Fortfahren?"</string>
+  <string name="cloud_app_mine">Geladene Apps</string>
+  <string name="cloud_app_name">Cloud Sicherung</string>
+  <string name="cloud_app_no_data">Keine Daten.</string>
+  <string name="cloud_app_no_network">Netzwerk nicht verfügbar</string>
+  <string name="cloud_app_no_wifi">WLAN nicht verfügbar</string>
+  <string name="cloud_app_no_wifi_connect">WLAN nicht verfügbar</string>
+  <string name="cloud_app_other_devices">Andere Geräte</string>
+  <string name="cloud_app_remove_cancel">Abbrechen</string>
+  <string name="cloud_app_remove_cancel_prompt_message">"Löschen noch nicht abgeschlossen. Trotzdem abbrechen?"</string>
+  <string name="cloud_app_remove_cancel_prompt_title">Löschen abbrechen</string>
+  <string name="cloud_app_remove_error">Löschen fehlgeschlagen!</string>
+  <string name="cloud_app_remove_pending">Bitte warten...</string>
+  <string name="cloud_app_remove_progress">Lösche...</string>
+  <string name="cloud_app_remove_prompt">%1$s der Daten werden gelöscht. Fortfahren?</string>
+  <string name="cloud_app_restore_action_bar_title">%1$s der Daten wurden gesichert</string>
+  <string name="cloud_app_restore_app_and_data">Apps und Nutzerdaten wiederherstellen</string>
+  <string name="cloud_app_restore_cancel">Wiederherstellen abbrechen</string>
+  <string name="cloud_app_restore_cancel_prompt_message">"Wiederherstellen unvollständig. Trotzdem abbrechen?"</string>
+  <string name="cloud_app_restore_cancel_prompt_title">Wiederherstellung abbrechen</string>
+  <string name="cloud_app_restore_data">Zuletzt installierte Apps wiederherstellen</string>
+  <string name="cloud_app_restore_data_title">Benutzerdaten wiederherstellen</string>
+  <string name="cloud_app_restore_error">Wiederherstellen fehlgeschlagen!</string>
+  <string name="cloud_app_restore_pending">Bitte warten...</string>
+  <string name="cloud_app_restore_progress">Wiederherstellung...</string>
+  <string name="cloud_app_restore_prompt">Die Wiederherstellung aus der MiCloud wird alle lokalen Daten überschreiben.</string>
+  <string name="cloud_app_restore_query_error_prompt">"Laden der Daten aus der MiCloud fehlgeschlagen. Apps und Benutzerdaten werden automatisch wiederhergestellt, sobald eine Verbindung hergestellt werden kann."</string>
+  <string name="cloud_app_restore_success">Apps wiederhergestellt!</string>
   <string name="cloud_app_restore_summary">Restore previously installed apps and associated user data</string>
   <string name="cloud_app_restore_wifi_prompt">Connect using the Internet via Wi-Fi to restore app and user data.</string>
   <string name="cloud_app_total_size">MiCloud backup size: %1$s</string>
