--- a/German/main/Calculator.apk/res/values-de/strings.xml
+++ b/German/main/Calculator.apk/res/values-de/strings.xml
@@ -1,16 +1,16 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="advanced">Advanced panel</string>
-  <string name="app_name">Calculator</string>
-  <string name="basic">Basic panel</string>
+  <string name="advanced">Erweitert</string>
+  <string name="app_name">Rechner</string>
+  <string name="basic">Vereinfacht</string>
   <string name="clear">C</string>
-  <string name="clearDesc">clear</string>
-  <string name="clear_history">Clear history</string>
+  <string name="clearDesc">Löschen</string>
+  <string name="clear_history">Verlauf leeren</string>
   <string name="cos">cos</string>
-  <string name="cosDesc">cosine</string>
+  <string name="cosDesc">Kosinus</string>
   <string name="cos_mathematical_value">cos</string>
   <string name="del">DEL</string>
-  <string name="delDesc">delete</string>
+  <string name="delDesc">löschen</string>
   <string name="digit0">0</string>
   <string name="digit1">1</string>
   <string name="digit2">2</string>
@@ -22,50 +22,50 @@
   <string name="digit8">8</string>
   <string name="digit9">9</string>
   <string name="div">÷</string>
-  <string name="divDesc">divide</string>
+  <string name="divDesc">dividieren</string>
   <string name="dot">.</string>
-  <string name="dotDesc">point</string>
+  <string name="dotDesc">Punkt</string>
   <string name="e">e</string>
-  <string name="eDesc">"Euler's number"</string>
+  <string name="eDesc">"Eulersche Zahl"</string>
   <string name="e_mathematical_value">e</string>
   <string name="enter">↓</string>
   <string name="equal">=</string>
-  <string name="equalDesc">equals</string>
+  <string name="equalDesc">ergibt</string>
   <string name="equal_on_history">=</string>
-  <string name="error">Error</string>
+  <string name="error">Fehler</string>
   <string name="factorial">!</string>
-  <string name="factorialDesc">factorial</string>
+  <string name="factorialDesc">Fakultät</string>
   <string name="leftParen">(</string>
-  <string name="leftParenDesc">left parenthesis</string>
+  <string name="leftParenDesc">Klammer auf</string>
   <string name="lg">log</string>
-  <string name="lgDesc">logarithm</string>
+  <string name="lgDesc">Logarithmus</string>
   <string name="lg_mathematical_value">lg</string>
   <string name="ln">ln</string>
-  <string name="lnDesc">natural logarithm</string>
+  <string name="lnDesc">natürlicher Logarithmus</string>
   <string name="ln_mathematical_value">ln</string>
   <string name="minus">−</string>
   <string name="minusDesc">minus</string>
   <string name="mul">×</string>
-  <string name="mulDesc">multiply</string>
+  <string name="mulDesc">multiplizieren</string>
   <string name="pi">π</string>
-  <string name="piDesc">pi</string>
+  <string name="piDesc">Pi</string>
   <string name="plus">+</string>
   <string name="plusDesc">plus</string>
   <string name="power">^</string>
-  <string name="powerDesc">power</string>
+  <string name="powerDesc">potenzieren</string>
   <string name="rightParen">)</string>
-  <string name="rightParenDesc">right parenthesis</string>
-  <string name="scientific">scientific</string>
+  <string name="rightParenDesc">Klammer zu</string>
+  <string name="scientific">wissenschaftlich</string>
   <string name="sin">sin</string>
-  <string name="sinDesc">sine</string>
+  <string name="sinDesc">Sinus</string>
   <string name="sin_mathematical_value">sin</string>
   <string name="sqrt">√</string>
-  <string name="sqrtDesc">square root</string>
-  <string name="standard">standard</string>
-  <string name="switch_to_scientific_pad">Switch to scientific</string>
-  <string name="switch_to_standard_pad">Switch to standard</string>
+  <string name="sqrtDesc">Quadratwurzel</string>
+  <string name="standard">Standard</string>
+  <string name="switch_to_scientific_pad">Wechsel auf wissenschaftlich</string>
+  <string name="switch_to_standard_pad">Welchsel auf Standard</string>
   <string name="tan">tan</string>
-  <string name="tanDesc">tangent</string>
+  <string name="tanDesc">Tangens</string>
   <string name="tan_mathematical_value">tan</string>
-  <string name="text_copied_toast">Text copied.</string>
+  <string name="text_copied_toast">Text kopiert.</string>
 </resources>
