--- a/German/main/ContactsProvider.apk/res/values-de/strings.xml
+++ b/German/main/ContactsProvider.apk/res/values-de/strings.xml
@@ -1,28 +1,28 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_label">Contacts Storage</string>
-  <string name="call_log_provider_label">Call log</string>
-  <string name="create_contact">New contact</string>
-  <string name="debug_dump_database_message">You are about to 1) make a copy of your database which includes all contacts related information and all call log to the internal storage, and 2) email it. Remember to delete the copy as soon as you have successfully copied it off the device or the email is received.</string>
-  <string name="debug_dump_delete_button">Delete now</string>
-  <string name="debug_dump_email_body">Attached is my contacts database with all my contacts information. Handle it with care.</string>
-  <string name="debug_dump_email_sender_picker">Choose a program to send your file</string>
-  <string name="debug_dump_email_subject">Contacts DB attached</string>
+  <string name="app_label">Kontakt-Speicher</string>
+  <string name="call_log_provider_label">Anruf-Protokoll</string>
+  <string name="create_contact">Neuer Kontakt</string>
+  <string name="debug_dump_database_message">Sie sind dabei, 1.) eine Kopie Ihrer Datenbank auf dem lokalen Speicher zu erstellen, welche alle Kontakt-Informationen und Anruf-Protokolle enthält und 2.), diese per E-Mail zu versenden. Denken Sie daran, die Kopie zu löschen, sobald Sie die Kopie erfolgreich von Ihrem Gerät kopiert haben oder die E-Mail empfangen wurde.</string>
+  <string name="debug_dump_delete_button">Jetzt löschen</string>
+  <string name="debug_dump_email_body">Im Anhang ist meine Kontakt-Datenbank mit all meinen Kontakt-Daten - behandle sie vorsichtig.</string>
+  <string name="debug_dump_email_sender_picker">Wählen Sie ein Programm zum Versenden Ihrer Datei</string>
+  <string name="debug_dump_email_subject">Kontakt-Datenbank angehängt</string>
   <string name="debug_dump_start_button">Start</string>
-  <string name="debug_dump_title">Copy contacts database</string>
-  <string name="default_directory">Contacts</string>
-  <string name="edit_contact">Add to contact</string>
-  <string name="local_invisible_directory">Other</string>
-  <string name="pound_search_tip">Input number after \"#\" to search contacts</string>
-  <string name="provider_label">Contacts</string>
-  <string name="read_write_all_voicemail_description">Allows the application to store and retrieve all voicemails that this device can access.</string>
-  <string name="read_write_all_voicemail_label">Access all voicemails</string>
-  <string name="send_sms">Send message</string>
-  <string name="sharedUserLabel">Android Core Apps</string>
-  <string name="third_party_delete_contact_info">\"%s\" is deleting your Xiaomi contacts, please use your system Contacts instead for improved security of your contacts.</string>
-  <string name="upgrade_msg">Upgrading Contacts database.</string>
-  <string name="upgrade_out_of_memory_notification_text">Select to complete the upgrade.</string>
-  <string name="upgrade_out_of_memory_notification_ticker">Contact upgrade needs more memory</string>
-  <string name="upgrade_out_of_memory_notification_title">Upgrading contact storage</string>
-  <string name="voicemail_from_column">"Voicemail from "</string>
+  <string name="debug_dump_title">Kontakt-Datenbank kopieren</string>
+  <string name="default_directory">Kontakte</string>
+  <string name="edit_contact">Zu Kontakt hinzufügen</string>
+  <string name="local_invisible_directory">Andere</string>
+  <string name="pound_search_tip">Geben Sie eine Nummer hinter dem \"#\" ein, um Kontakte zu suchen</string>
+  <string name="provider_label">Kontakte</string>
+  <string name="read_write_all_voicemail_description">Erlaubt der App, alle Voicemails zu speichern und abzurufen, auf die dieses Gerät Zugriff hat.</string>
+  <string name="read_write_all_voicemail_label">Alle Voicemails abrufen</string>
+  <string name="send_sms">Nachricht senden</string>
+  <string name="sharedUserLabel">Android Standard-Apps</string>
+  <string name="third_party_delete_contact_info">\"%s\" löscht Ihre Xiaomi-Kontakte. Bitte benutzen Sie stattdessen die App \"Kontakte\" für höhere Sicherheit Ihrer Kontakte.</string>
+  <string name="upgrade_msg">Rüste Kontakt-Datenbank auf.</string>
+  <string name="upgrade_out_of_memory_notification_text">Aufrüstung durch Auswahl fertigstellen</string>
+  <string name="upgrade_out_of_memory_notification_ticker">Aufrüstung benötigt mehr Speicher</string>
+  <string name="upgrade_out_of_memory_notification_title">Rüste Kontakt-Speicher auf</string>
+  <string name="voicemail_from_column">"Voicemail von "</string>
 </resources>
